--- a/flipdown.css
+++ b/flipdown.css
@@ -6,7 +6,7 @@
   font-family: sans-serif;
   font-weight: bold;
 }
-/* Rotor group headings */
+/* Rotor group headings 1 */
 .flipdown.flipdown__theme-dark .rotor-group-heading:before {
   color: #000000;
 }
